@@ -53,6 +53,10 @@ Version 1.3.0 (2004-06-30)
 
  - Added mitab_c_load_coordsys_table() to C API (bug 469)
 
+ - mitab_ogr_datasource.cpp: Don't report single layer that hasn't been
+   "created" yet via GetLayerCount().  Fixes up single file generation issues.
+
+
 Version 1.2.4 (2003-07-23)
 --------------------------
 
@@ -577,5 +581,5 @@ Version 0.1 - (1999-12-04)
 
 
 ------------
-$Id: HISTORY.TXT,v 1.121 2004-06-30 20:22:31 dmorissette Exp $
+$Id: HISTORY.TXT,v 1.122 2004-07-07 15:42:46 fwarmerdam Exp $
 ------------
